force-app/main/default/objects/ISSN__c/ISSN__c.object-meta.xml
<CustomObject>
    <label>ISSN</label>
    <nameField>
        <label>ISSN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISSNs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>