force-app/main/default/objects/ISSN__c/fields/I_RS_Conference_Journal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Conference_Journal__c</fullName>
    <label>Conference/Journal</label>
    <referenceTo>Conference_Journal__c</referenceTo>
    <relationshipName>ISSN_Master</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>