force-app/main/default/objects/ISSN__c/fields/I_RS_ISSN_type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ISSN_type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>isbn-13</fullName>
            </value>
            <value>
                <fullName>isbn-10</fullName>
            </value>
            <value>
                <fullName>issn</fullName>
            </value>
            <value>
                <fullName>eissn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>